# playground

./: .gitignore  flake.nix
cue/: README.md  flake.nix  one.yaml  three.yaml  two.yaml
cue/bottom/: main.cue
cue/cmd_failure/: main_tool.cue
cue/consume/: consume.cue
cue/cue.mod/: module.cue
cue/debug/: debug.cue  modify.cue
cue/issue-3894/: main.cue
cue/issue-3957-oneof/: main.cue
cue/issue-3998-cmd_failure/: eval.cue  in.yaml  main_tool.cue
cue/json-to-yaml/: main.cue
cue/loop_write_files/: in.json  main_tool.cue
cue/main/: debug.cue  dump_tool.cue  modify.cue
cue/map_of_lists/: main.cue
cue/moduleA/: schema.cue
cue/moduleB/: schema.cue
cue/nix/: github.nix
cue/oneOf/: main.cue
docs/: learning-first-principles.md
envoy/: Justfile  README.md  Tiltfile  compose.yaml  envoy-gateway.yaml  flake.nix  k3d-config.yaml  minimal-envoy-config.yaml  quickstart.yaml  wasm-envoy.yaml  wasm.yaml
firecracker/: 01-setup_host.sh  02-launch_vm.sh  98-terminate_firecrackers.sh  99-cleanup.sh  README.md  create-arch-rootfs.sh  tmpl.sh  variables
ideas/: 01-nix-direnv-worktrees.md  02-opencode-session-lifecycle.md  03-opencode-repo-scoped-sessions.md  04-manual-rag-local-model.md  05-local-models-microvm-nix.md  06-hands-off-agentic-workflow.md  README.md
k8s/: Justfile  flake.nix  k3d-config.yaml
linux/: README.md
nix/: .gitignore  README.md  builder  derivation.nix  flake.nix  nixos-tests.nix  simple-print.nix
prometheus/: Justfile  README.md  simple.yml
wasm/: Cargo.toml  Justfile  README.md  flake.nix
wasm/src/: lib.rs  main.rs
(+93 files in other folders)
